# RMV-TASK3

./: README.md  data_point.cpp  main.cpp
ceres_solver/: CMakeLists.txt  README.md  data_point.txt
